Integration Front-end - Back-end & Testing

--- a/frontend/src/app/ocorrencias/ocorrencias/ocorrencias.component.html
+++ b/frontend/src/app/ocorrencias/ocorrencias/ocorrencias.component.html
@@ -1,23 +1,58 @@
 <div class="margin">
     <mat-card>
-        <mat-card-subtitle>
-            Consulta de exames de mamografia - Relação de Regiões
-        </mat-card-subtitle>
-        
-        <table matSort (matSortChange)="regioes">
-            <!-- Table Row (tr) -->
+        <mat-card-subtitle>Exames de mamografia entre Junho e Julho de 2015</mat-card-subtitle>
+
+        <table matSort (matSortChange)="ocorrencia_exame">
             <tr>
-                <!-- Table Header (th) -->
                 <th mat-sort-header="id">ID</th>
-                <th mat-sort-header="regiao">Região</th>
-                <th mat-sort-header="total_exames">Total de Exames</th>
+                <th mat-sort-header="regiao_id">ID Região</th>
+                <th mat-sort-header="Mes">Mês</th>
+                <th mat-sort-header="faixa_id">ID Faixa Etaria</th>
+                <th mat-sort-header="qnt_exames">N° de exames</th>
             </tr>
 
-            <tr *ngFor="let element of regioes">
+            <tr *ngFor="let element of ocorrencia_exame">
+                <td>{{element.id}}</td>
+                <td>{{element.regiao_id}}</td>
+                <td>{{element.Mes}}</td>
+                <td>{{element.faixa_id}}</td>
+                <td>{{element.qnt_exames}}</td>
+            </tr>
+        </table>
+    </mat-card>
+
+    <mat-card>
+        <mat-card-subtitle>Relação de Regiões Brasileiras</mat-card-subtitle>
+        <table matSort (matSortChange)="regiao">
+            <tr>
+                <th mat-sort-header="id">ID</th>
+                <th mat-sort-header="regiao'">Região</th>
+                <th mat-sort-header="total_exames">N° Exames</th>
+            </tr>
+            <tr *ngFor="let element of regiao">
                 <td>{{element.id}}</td>
                 <td>{{element.regiao}}</td>
                 <td>{{element.total_exames}}</td>
             </tr>
         </table>
     </mat-card>
+
+    <mat-card>
+        <mat-card-subtitle>Faixa Etaria das mulheres que realizaram os exames</mat-card-subtitle>
+        <table matSort (matSortChange)="faixaetaria">
+            <tr>
+                <th mat-sort-header="id">ID</th>
+                <th mat-sort-header="faixa_i">Faixa inicial</th>
+                <th mat-sort-header="faixa_n">Faixa final</th>
+                <th mat-sort-header="descricao">Descrição</th>
+            </tr>
+            <tr *ngFor="let element of faixaetaria">
+                <td>{{element.id}}</td>
+                <td>{{element.faixa_i}}</td>
+                <td>{{element.faixa_n}}</td>
+                <td>{{element.descricao}}</td>
+            </tr>
+        </table>
+    </mat-card>
+
 </div>
