--- a/frontend/src/app/ocorrencias/ocorrencias/ocorrencias.component.html
+++ b/frontend/src/app/ocorrencias/ocorrencias/ocorrencias.component.html
@@ -1,22 +1,22 @@
-<div class="margin">
+<div class="margin space">
     <mat-card>
         <mat-card-subtitle>Exames de mamografia entre Junho e Julho de 2015</mat-card-subtitle>
 
-        <table matSort (matSortChange)="ocorrencia_exame">
+        <table matSort (matSortChange)="incidencia">
             <tr>
                 <th mat-sort-header="id">ID</th>
                 <th mat-sort-header="regiao_id">ID Região</th>
-                <th mat-sort-header="Mes">Mês</th>
+                <th mat-sort-header="mes">Mês</th>
                 <th mat-sort-header="faixa_id">ID Faixa Etaria</th>
-                <th mat-sort-header="qnt_exames">N° de exames</th>
+                <th mat-sort-header="qtd_exames">N° de exames</th>
             </tr>
 
-            <tr *ngFor="let element of ocorrencia_exame">
+            <tr *ngFor="let element of incidencia">
                 <td>{{element.id}}</td>
                 <td>{{element.regiao_id}}</td>
-                <td>{{element.Mes}}</td>
+                <td>{{element.mes}}</td>
                 <td>{{element.faixa_id}}</td>
-                <td>{{element.qnt_exames}}</td>
+                <td>{{element.qtd_exames}}</td>
             </tr>
         </table>
     </mat-card>
@@ -27,18 +27,18 @@
             <tr>
                 <th mat-sort-header="id">ID</th>
                 <th mat-sort-header="regiao'">Região</th>
-                <th mat-sort-header="total_exames">N° Exames</th>
+                <th mat-sort-header="qtd_exames">N° Exames</th>
             </tr>
             <tr *ngFor="let element of regiao">
                 <td>{{element.id}}</td>
                 <td>{{element.regiao}}</td>
-                <td>{{element.total_exames}}</td>
+                <td>{{element.qtd_exames}}</td>
             </tr>
         </table>
     </mat-card>
 
     <mat-card>
-        <mat-card-subtitle>Faixa Etaria das mulheres que realizaram os exames</mat-card-subtitle>
+        <mat-card-subtitle>Faixa Etária das mulheres que realizaram os exames</mat-card-subtitle>
         <table matSort (matSortChange)="faixaetaria">
             <tr>
                 <th mat-sort-header="id">ID</th>
